--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,9 @@ $transition: all .4s ease;
   box-sizing: border-box;
 }
 body{
-  background-color: #2b2b2b;
+  background-image: url('../jpg/bcg.png');
+  background-attachment: fixed;
+  background-size: cover;
   font-family: 'Montserrat',
   sans-serif;
   color: white;
@@ -17,7 +19,8 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
+  max-height: 150vh;
   .rule-section{
     margin: 10px 0;
     transition: $transition;
@@ -26,7 +29,7 @@ body{
 .rule-section{
   width: 900px;
   height: 40px;
-  background-color: red;
+  background-color: rgba(54, 54, 54, 0.521);
   border-radius: 8px;
   cursor: pointer;
   display: flex;
