--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,15 @@ body{
   font-family: 'Montserrat',
   sans-serif;
   color: white;
+  overflow-y: scroll;
+}
+body::-webkit-scrollbar{
+  width: 10px;
+  background-color: rgb(0, 0, 0);
+}
+body::-webkit-scrollbar-thumb{
+  background-color: rgba(110, 110, 110, 0.521);
+  border-radius: 5px;
 }
 .rules{
   text-align: center;
