--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@ body{
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   font-family: 'Montserrat',
   sans-serif;
   color: white;
