--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@ body{
   background-repeat: no-repeat;
   font-family: 'Montserrat',
   sans-serif;
-  color: white;
+  color: black;
 }
 body::-webkit-scrollbar{
   width: 10px;
@@ -31,6 +31,20 @@ body::-webkit-scrollbar-thumb{
   justify-content: space-between;
   width: 100%;
   max-height: 150vh;
+  h1{
+    color: white;
+    text-decoration: double;
+    position: relative;
+    &::after{
+      content: 'Regulamin Serwera';
+      position: absolute;
+      z-index: -1;
+      top: 2px;
+      left: -2px;
+      color: black;
+      filter: blur(5px);
+    }
+  }
   .rule-section{
     margin: 10px 0;
     transition: $transition;
@@ -39,7 +53,8 @@ body::-webkit-scrollbar-thumb{
 .rule-section{
   width: 900px;
   height: 40px;
-  background-color: rgba(54, 54, 54, 0.521);
+  background-color: rgba(219, 219, 219, 0.521);
+  border: 1px solid rgb(41, 41, 41);
   border-radius: 8px;
   cursor: pointer;
   display: flex;
@@ -112,7 +127,7 @@ body::-webkit-scrollbar-thumb{
     height: 280px;
   }
   .rules-player{
-    height: 620px;
+    height: 630px;
   }
   .rules-chat{
     height: 250px;
@@ -127,28 +142,35 @@ body::-webkit-scrollbar-thumb{
   }
 }
 @media screen and (max-width: 460px) {
+  .rule-section{
+    width: 98%;
+    padding-left: 2px;
+  }
   .rules-mainly {
     height: 200px;
   }
-
   .rules-admins {
-    height: 300px;
+    height: 305px;
   }
-
   .rules-player {
     height: 650px;
   }
-
   .rules-chat {
     height: 250px;
   }
 }
 @media screen and (max-width: 380px) {
-  .rule-section{
-    width: 98%;
-    padding-left: 2px;
-    ul{
-      font-size: 11px;
-    }
+  .rules-mainly {
+    height: 200px;
+  }
+  .rules-admins {
+    height: 370px;
+  }
+  .rules-player {
+    height: 770px;
+    padding-left: 4px;
+  }
+  .rules-chat {
+    height: 300px;
   }
 }
