--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,13 +62,11 @@ body::-webkit-scrollbar-thumb{
   justify-content: flex-start;
   align-items: center;
   &::-webkit-scrollbar {
-    width: 10px;
-    background-color: rgb(0, 0, 0);
+    display: none;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: rgba(110, 110, 110, 0.521);
-    border-radius: 5px;
+    display: none;
   }
 }
 .rule-section{
