--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,6 +46,7 @@ body::-webkit-scrollbar-thumb{
       top: 2px;
       left: -2px;
       color: black;
+      font-weight: 600;
       filter: blur(5px);
     }
   }
@@ -53,10 +54,10 @@ body::-webkit-scrollbar-thumb{
 .rules-container{
   width: 950px;
   height: 90vh;
-  border: 1px solid #fff;
-  border-radius: 15px 0 0 15px;
+  border-bottom: 1px solid #fff;
+  border-radius: 10px 10px 0 0;
   overflow-y: scroll;
-
+  background-color: rgba(0, 0, 0, 0.521);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -74,9 +75,11 @@ body::-webkit-scrollbar-thumb{
   height: 40px;
   margin: 10px 0;
   transition: $transition;
-  background-color: rgba(219, 219, 219, 0.521);
-  border: 1px solid rgb(41, 41, 41);
-  border-radius: 8px;
+  // background-color: rgba(219, 219, 219, 0.521);
+  border-bottom: 1px solid rgb(184, 184, 184);
+  // border-radius: 8px;
+  color: white;
+  font-weight: 200;
   cursor: pointer;
   display: flex;
   flex-direction: column;
