--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,51 @@ body::-webkit-scrollbar-thumb{
     }
   }
 }
+.header-line{
+  width: 100%;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.header-title{
+  height: 50px;
+}
+.shop-btn {
+  width: 200px;
+  height: 30px;
+  display: block;
+  position: relative;
+  background: none;
+  border: 1px solid #fff;
+  border-radius: 10px 5px;
+  color: white;
+  font-size: 21px;
+  cursor: pointer;
+  transition: all .6s ease;
+  overflow: hidden;
+  z-index: 1;
+  &::before{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 220px;
+    height: 200px;
+    border-radius: 200px;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: -10px;
+    transition: $transition;
+    transform: translateY(30px);
+    z-index: -1;
+  }
+  &:hover {
+    &::before{
+      transform: translateY(-80px);
+    }
+  }
+}
 .rules-container{
   width: 950px;
   height: 90vh;
